# decision-transformer-traffic

./: .gitignore  .mcp.json  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
configs/: ablation_no_gat.yaml  ablation_no_rtg.yaml  ablation_short_context.yaml  default.yaml  experiment.yaml  large_scale.yaml  smoke_test.yaml
paper/: literature_review.md  literature_review_v2.md  main.tex  references.bib
paper/tables/: ablation.tex  main_results.tex  scalability.tex
results/: ablation_results.json  baseline_comparison.json  cdt_2knob.json  cql_results.json  dt_4x4_3seed.json  dt_4x4_full.json  dt_arterial.json  hyperparameter_sweep.json  madt_improved.json  madt_results.json  narrative_numbers.json  quick_experiment_results.json  return_conditioning_sweep_real.json  return_sweep.json  scalability.json
scripts/: analyze_results.py  evaluate.py  gen_cr_figs.py  generate_camera_ready_figures.py  generate_dataset.py  generate_demo_figures.py  generate_figures.py  generate_latex_tables.py  generate_ma_dataset.py  generate_narrative_figures.py  generate_paper_figures.py  generate_spacetime_figure.py  profile_env.py  quick_demo.py  return_conditioning_sweep.py  run_ablations.py  run_all.py  run_baselines.py  run_cql_experiment.py  run_dt_4x4_3seed.py  run_dt_4x4_full.py  run_dt_arterial.py  run_experiment.py  run_hyperparameter_sweep.py  run_paper_experiments.py  run_quick_ablation.py  run_real_experiments.py  run_return_conditioning_sweep.py  run_scalability.py  smoke_test.py  train_and_eval_madt.py  train_baselines.py  train_dt.py  train_improved_madt.py  train_madt.py
src/: __init__.py  __main__.py
src/baselines/: __init__.py  cql_baseline.py  fixed_time_evp.py  greedy_preempt.py  iql_baseline.py  max_pressure.py  rl_baselines.py
src/envs/: __init__.py  ev_corridor_env.py  ev_corridor_ma_env.py  ev_tracker.py  lightsim_adapter.py  network_utils.py  reward_shaping.py  scenarios.py  wrappers.py
src/models/: madt.py  (+4 more)
tests/: conftest.py  test_baselines.py  test_config_utils.py  test_constrained_dt.py  test_cql.py  test_data_collector.py  test_decision_transformer.py  test_ev_corridor_env.py  test_ev_corridor_ma_env.py  test_ev_tracker.py  test_experiment.py  test_integration.py  test_iql.py  test_lightsim_integration.py  test_ma_pipeline.py  test_madt.py  test_max_pressure.py  test_metrics.py  test_network_utils.py  test_reward_shaping.py  test_scenarios.py  test_timer.py  test_trajectory_dataset.py  test_wandb_logger.py  test_wrappers.py
(+8 files in other folders)
